--- a/mystyle.css
+++ b/mystyle.css
@@ -1,10 +1,9 @@
 body {
-background-image:url("1.jpg");
-background-size:100%auto; 
 padding-left: 15em;
 font-family: Georgia, "Times New Roman",
 Times, serif;
 color: red;
+background-color:#e1fa02;
 }
 ul.navbar {
 list-style-type: none;
